--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.4.14'
+    id "org.jetbrains.kotlin.jvm" version "1.3.41"
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 group 'com.fulinlin'
