--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'uk.com.robust-it', name: 'cloning', version: '1.9.12'
+
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
