feat(settings): 模版修改
- 加入git 提交模版修改保存

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2019.3'
+    version 'IU-2019.3'
 }
 patchPluginXml {
     changeNotes """
