--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,8 +4,17 @@
     <vendor email="13103779727@163.com" url="https://github.com/AutismSuperman">FuLinLin</vendor>
     <description>
         <![CDATA[
-        <h1>Help you git commit specification in idea </h1>
-        <p>Plugin GitHub address:<a href="https://github.com/AutismSuperman/git-commit-message-helper">https://github.com/AutismSuperman/git-commit-message-helper</a></p>
+        <h1>A plugin that helps you standardize submissions</h1>
+        <p>This plugin is an upgraded version of the source idea plugin git-commit-template</p>
+        <p>adding a series of personalized configurations.</p>
+        <h1>Usage</h1>
+        <p><img src="https://raw.githubusercontent.com/AutismSuperman/git-commit-message-helper/master/image/operation.gif" alt="" style="width: 100%;height: 100%;objec-fit: cover;"></p>
+        <p>If you want to change the type of submission, you can change it in settings</p>
+        <p><img src="https://raw.githubusercontent.com/AutismSuperman/git-commit-message-helper/master/image/settings-2.png" alt="" style="width: 100%;height: 100%;objec-fit: cover;"></p>
+        <p>If you want to personalize your submission template can be set in the settings</p>
+        <p>the template engine here uses velocity</p>
+        <p><img src="https://raw.githubusercontent.com/AutismSuperman/git-commit-message-helper/master/image/settings-1.png" alt="" style="width: 100%;height: 100%;objec-fit: cover;"></p>
+        <p>Plugin GitHub address:<a href="https://github.com/AutismSuperman/git-commit-message-helper">git-commit-message-helper</a></p>
         ]]>
     </description>
 
