--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,32 +19,6 @@
                     <li>该插件是源自git-commit-message-helper的加强版,添加一系列个性化的配置</li>
                 </ul>
             </div>
-            <div>
-                <h2>How to use</h2>
-                <br>
-                <p><img src="https://raw.githubusercontent.com/Chivenh/git-commit-msg-helper/main/image/operation.gif"
-                        alt="operation">
-                </p>
-            </div>
-            <br>
-            <div>
-                <h2>Configuration</h2>
-                <p>
-                    If you want to change the type of submission.You can open the following location: </p>
-                <p> Configuration path: File -> settings->Other Settings-> GitCommitMessageHelper->type</p>
-
-                <p>
-                    <img src="https://raw.githubusercontent.com/Chivenh/git-commit-msg-helper/main/image/settings-2.png"
-                         alt="settings-2">
-                </p>
-                <p>If you want to personalize your submission template.You can open the following location: </p>
-                <p> Configuration path: File -> settings->Other Settings-> CitCommitMessageHelper->template </p>
-
-                <p><img src="https://raw.githubusercontent.com/Chivenh/git-commit-msg-helper/main/image/settings-1.png"
-                        alt="settings-1">
-                </p>
-            </div>
-
         ]]>
     </description>
 
@@ -82,7 +56,7 @@
     <actions>
         <action id="Commit.Button" class="com.chivenh.action.CreateCommitAction"
                 text="编辑提交信息"
-                description="编辑提交信息"
+                description="'编辑提交信息'"
                 icon="PluginIcons.ICON">
             <add-to-group group-id="Vcs.MessageActionGroup" anchor="first"/>
         </action>
