--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,57 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.intellij' version '0.4.14'
+    id 'java-library'
+    id 'org.jetbrains.intellij' version '1.7.0'
+    id 'org.jetbrains.changelog' version "1.3.1"
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
 
-group 'com.fulinlin'
-version '1.0.0'
+apply plugin: 'org.jetbrains.changelog'
 
-sourceCompatibility = 1.8
+group project.pluginGroup
+
+version project.pluginVersion
+
+
+sourceCompatibility = 11
+targetCompatibility = 11
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'uk.com.robust-it', name: 'cloning', version: '1.9.12'
-
+    api  'uk.com.robust-it:cloning:1.9.12'
+    api 'commons-io:commons-io:2.11.0'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-//    version 'IU-2017.1'
-    version 'IU-2020.1'
-    pluginName 'Git Commit Message Helper'
-    updateSinceUntilBuild false
+    pluginName = project.pluginName
+    version = project.platformVersion
+    type = project.platformType
+    downloadSources = true
+    updateSinceUntilBuild = false
+    buildSearchableOptions.enabled = false
+
+    runIde {
+        jvmArgs = project.runIdeJvmArgs.split(',').toList()
+    }
+
+    patchPluginXml {
+        sinceBuild = project.pluginSinceBuild
+        untilBuild = project.pluginUntilBuild
+        pluginDescription = new File(project.pluginDescription).getText('UTF-8')
+        //changeNotes.set(provider { changelog.get(project.version + ".0").toHTML() })
+    }
+
 }
-patchPluginXml {
-    changeNotes """
-         <ul>
-              <li>personalized submission type<br></li>
-              <li>personalized submission template</li>
-         </ul>
-     """
+
+changelog {
+
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
