feature: 添加设置面板国际化

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ platformType = IU
 platformVersion = 2020.2
 
 # ,-Dide.browser.jcef.log.level=verbose,-Duser.language=en-US
-runIdeJvmArgs = -Dfile.encoding=utf-8
+runIdeJvmArgs = -Dfile.encoding=utf-8,-Duser.language=en-US
