feature: 优化图标，优化ui

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -81,7 +81,7 @@
         <action id="Commit.Button" class="com.fulinlin.action.CreateCommitAction"
                 text="Create Commit Message"
                 description="Create commit message"
-                icon="PluginIcons.ICON">
+                icon="PluginIcons.EDIT">
             <add-to-group group-id="Vcs.MessageActionGroup" anchor="first"/>
         </action>
     </actions>
