--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,56 +1,35 @@
 <idea-plugin>
     <id>commit-message-helper-idea-plugin</id>
     <name>Git Commit Message Helper</name>
-    <vendor email="13103779727@163.com" url="https://github.com/AutismSuperman">FuLinLin</vendor>
-    <version>1.0.0</version>
-    <description>
-        <![CDATA[
-             <div>
-                <h2>Introduction</h2>
-                <br>
-                <ul>
-                    <li>A plugin that helps you standardize submissions</li>
-                    <li>This plugin is an upgraded version of the source idea plugin git-commit-template,adding a series of
-                        personalized configurations.
-                    </li>
-                </ul>
-                <ul>
-                    <li>一个可帮助您标准化提交内容的插件</li>
-                    <li>该插件是源自git-commit-template的加强版,添加一系列个性化的配置</li>
-                </ul>
-            </div>
-            <div>
-                <h2>How to use</h2>
-                <br>
-                <p><img src="https://raw.githubusercontent.com/AutismSuperman/git-commit-message-helper/master/image/operation.gif"
-                        alt="operation">
-                </p>
-            </div>
-            <br>
-            <div>
-                <h2>Configuration</h2>
-                <p>
-                    If you want to change the type of submission.You can open the following location: </p>
-                <p> Configuration path: File -> settings->Other Settings-> CitCommitMessageHelper->type</p>
+    <vendor email="fulinlin9527@outlook.com" url="https://github.com/AutismSuperman">FuLinLin</vendor>
+    <version>1.2.0</version>
 
-                <p>
-                    <img src="https://raw.githubusercontent.com/AutismSuperman/git-commit-message-helper/master/image/settings-2.png"
-                         alt="settings-2">
-                </p>
-                <p>If you want to personalize your submission template.You can open the following location: </p>
-                <p> Configuration path: File -> settings->Other Settings-> CitCommitMessageHelper->template </p>
 
-                <p><img src="https://raw.githubusercontent.com/AutismSuperman/git-commit-message-helper/master/image/settings-1.png"
-                        alt="settings-1">
-                </p>
-            </div>
-
-        ]]>
-    </description>
+    <description><![CDATA[<p>Git Commit Message Helper user gradle plugin generate description</p>]]></description>
 
     <change-notes>
+        <![CDATA[
+         <strong>version 1.2.0<strong>
+         <br/>
+         <ul>
+             <li>Type supports emoji.</li>
+             <li>Cancel message caching after submitting the panel.</li>
+             <li>Add i18n support.</li>
+             <li>Optimize ui.</li>
+         </ul>
+         <strong>version 1.1.0<strong>
+         <br/>
+         <ul>
+             <li>Fix some bugs.</li>
+         </ul>
+         <strong>version 1.0.0</strong>
+         <br/>
+         <ul>
+              <li>Personalized submission type.</li>
+              <li>Personalized submission template.</li>
+         </ul>
+        ]]>
     </change-notes>
-
 
 
     <idea-version since-build="202"/>
