--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@ pluginGroup = com.fulinlin
 pluginName = Git Commit Message Helper
 pluginVersion = 1.2.0
 
-pluginSinceBuild = 202.388
+pluginSinceBuild = 203.392
 pluginUntilBuild =
 pluginDescription = doc/description.html
 
 platformType = IU
-platformVersion = 2020.2
+platformVersion = 2020.3
 
+# ko,ja,eb,zh
 # ,-Dide.browser.jcef.log.level=verbose,-Duser.language=en-US
-runIdeJvmArgs = -Dfile.encoding=utf-8,-Duser.language=en-US
+runIdeJvmArgs = -Dfile.encoding=utf-8
