feature: 优化文本框的border

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,5 @@ platformType = IU
 platformVersion = 2020.3
 
 # ko,ja,eb,zh
-# ,-Dide.browser.jcef.log.level=verbose,-Duser.language=en-US
-runIdeJvmArgs = -Dfile.encoding=utf-8
+# ,-Dide.browser.jcef.log.level=verbose,-Duser.language=en
+runIdeJvmArgs = -Dfile.encoding=utf-8,-Duser.language=ko
