feature: 优化新UI、优化国际化

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,4 @@ platformVersion = 2020.3
 
 # ko,ja,eb,zh
 # ,-Dide.browser.jcef.log.level=verbose,-Duser.language=en
-runIdeJvmArgs = -Dfile.encoding=utf-8,-Duser.language=ko
+runIdeJvmArgs = -Dfile.encoding=utf-8
