--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ intellij {
     updateSinceUntilBuild = false
     buildSearchableOptions.enabled = false
     //plugins=["com.intellij.zh:203.392"]
-    plugins=["com.intellij.ja:203.392"]
+    //plugins=["com.intellij.ja:203.392"]
 
     runIde {
         jvmArgs = project.runIdeJvmArgs.split(',').toList()
