--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ pluginVersion = 1.3.0
 pluginSinceBuild = 203.392
 pluginUntilBuild =
 pluginDescription = doc/description.html
+pluginChangeNotes = doc/change-notes.html
 
 platformType = IU
 platformVersion = 2020.3
