--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,41 +5,9 @@
     <version>1.3.0</version>
 
 
-    <description><![CDATA[<p>Git Commit Message Helper user gradle plugin generate description</p>]]></description>
+    <description><![CDATA[<p>Description notes will be filled by gradle build</p>]]></description>
 
-    <change-notes>
-        <![CDATA[
-         <strong>version 1.3.0<strong>
-         <br/>
-         <ul>
-             <li>Optimize Editor UI.</li>
-             <li>Can dynamically internationalize based on language plugins.</li>
-             <li>Fix some bugs.</li>
-         </ul>
-         <br/>
-         <strong>version 1.2.0<strong>
-         <br/>
-         <ul>
-             <li>Type supports emoji.</li>
-             <li>Cancel message caching after submitting the panel.</li>
-             <li>Add i18n support.</li>
-             <li>Optimize ui.</li>
-         </ul>
-         <br/>
-         <strong>version 1.1.0<strong>
-         <br/>
-         <ul>
-             <li>Fix some bugs.</li>
-         </ul>
-         <br/>
-         <strong>version 1.0.0</strong>
-         <br/>
-         <ul>
-              <li>Personalized submission type.</li>
-              <li>Personalized submission template.</li>
-         </ul>
-        ]]>
-    </change-notes>
+    <change-notes><![CDATA[<p>Change notes will be filled by gradle build</p>]]></change-notes>
 
 
     <idea-version since-build="203.*"/>
@@ -59,8 +27,17 @@
                 serviceImplementation="com.fulinlin.storage.GitCommitMessageHelperSettings"/>
         <projectService
                 serviceImplementation="com.fulinlin.storage.GitCommitMessageStorage"/>
+
+        <applicationConfigurable groupId="null"
+                                 id="plugins.gitcommitmessagehelper"
+                                 displayName="GitCommitMessageHelper"
+                                 instance="com.fulinlin.configurable.GitCommitMessageHelperConfigurable"/>
+
         <applicationConfigurable
-                instance="com.fulinlin.ui.setting.TemplateEditPaneConfigurable" displayName="GitCommitMessageHelper"/>
+                instance="com.fulinlin.configurable.TemplateConfigurable"
+                id="plugins.gitcommitmessagehelper.template"
+                groupId="plugins.gitcommitmessagehelper"
+                displayName="Commit Template"/>
 
     </extensions>
 
