feature: 模版描述国际化以及设置菜单国际化

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,8 +36,8 @@
         <applicationConfigurable
                 instance="com.fulinlin.configurable.TemplateConfigurable"
                 id="plugins.gitcommitmessagehelper.template"
-                groupId="plugins.gitcommitmessagehelper"
-                displayName="Commit Template"/>
+                key="setting.configurable.template"
+                groupId="plugins.gitcommitmessagehelper"/>
 
     </extensions>
 
