feature: 加入个性化设置菜单并处理持久化

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ intellij {
     downloadSources = true
     updateSinceUntilBuild = false
     buildSearchableOptions.enabled = false
-    //plugins=["com.intellij.zh:203.392"]
+    plugins=["com.intellij.zh:203.392"]
     //plugins=["com.intellij.ja:203.392"]
 
     runIde {
