--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,7 +36,7 @@
         <applicationConfigurable
                 instance="com.fulinlin.configurable.TemplateConfigurable"
                 id="plugins.gitcommitmessagehelper.template"
-                groupId="plugins.gitcommitmessagehelper"/>
+                groupId="plugins.gitcommitmessagehelper" displayName="Commit Template"/>
 
     </extensions>
 
